# app/Http/Controllers/v1/Company/BrandController.php
@@ -1,0 +1,160 @@
+<?php
+
+namespace App\Http\Controllers\v1\Company;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\v1\Company\storeBrandRequest;
+use App\Http\Resources\v1\Company\BrandResource;
+use App\Services\BrandService;
+use Illuminate\Http\Request;
+
+class BrandController extends Controller
+{
+    public BrandService $brandService;
+    public function __construct(BrandService $brandService)
+    {
+        $this->brandService = $brandService;
+    }
+
+    /**
+     *
+     *  @OA\Get(
+     *   security={ {"bearerAuth" : ""}},
+     *   tags={"Бренды компании"},
+     *   path="/v1/company/brands",
+     *   summary="Получение всех брендов компании",
+     *   @OA\Response(
+     *     response=200,
+     *     description="",
+     *     @OA\JsonContent(
+     *         @OA\Property(property="data", type="array",  @OA\Items(ref="#/components/schemas/v1.Company.BrandResource")),
+     *     )
+     *  ),
+     *   @OA\Response(response=401, description="Не авторизован"),
+     *   @OA\Response(response=403, description="Контент не доступен"),
+     *   @OA\Response(response=404, description="Не найдено"),
+     *   @OA\Response(response=422, description="Валидация формы"),
+     *   @OA\Response(response=429, description="Бан запросов на 1 минуту"),
+     *   @OA\Response(response=500, description="Ошибка сервера")
+     * )
+     */
+    public function index()
+    {
+        return BrandResource::collection($this->brandService->getList());
+    }
+
+    /**
+     *
+     *  @OA\Post(
+     *   security={ {"bearerAuth" : ""}},
+     *   tags={"Бренды компании"},
+     *   path="/v1/company/brands",
+     *   summary="Добавление бренда в компанию",
+     *     @OA\RequestBody(
+     *      required=true,
+     *      description="Тело запроса на добавление бренда в компанию",
+     *      @OA\JsonContent(
+     *            example=
+     *            {
+     *	           "name": "Waikiki",
+     *             }
+     *          ),
+     *   ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="",
+     *     @OA\JsonContent(
+     *         @OA\Property(property="data", type="array",  @OA\Items(ref="#/components/schemas/v1.Company.BrandResource")),
+     *     )
+     *  ),
+     *   @OA\Response(response=401, description="Не авторизован"),
+     *   @OA\Response(response=403, description="Контент не доступен"),
+     *   @OA\Response(response=404, description="Не найдено"),
+     *   @OA\Response(response=422, description="Валидация формы"),
+     *   @OA\Response(response=429, description="Бан запросов на 1 минуту"),
+     *   @OA\Response(response=500, description="Ошибка сервера")
+     * )
+     */
+    public function store(storeBrandRequest $request)
+    {
+        return new BrandResource($this->brandService->store($request->validated()));
+    }
+
+    /**
+     *
+     *  @OA\Get(
+     *   security={ {"bearerAuth" : ""}},
+     *   tags={"Бренды компании"},
+     *   path="/v1/company/brands/{id}",
+     *   summary="Просмотр бренда в компании",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID бренда",
+     *         required=true,
+     *      ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="",
+     *     @OA\JsonContent(
+     *         @OA\Property(property="data", type="array",  @OA\Items(ref="#/components/schemas/v1.Company.BrandResource")),
+     *     )
+     *  ),
+     *   @OA\Response(response=401, description="Не авторизован"),
+     *   @OA\Response(response=403, description="Контент не доступен"),
+     *   @OA\Response(response=404, description="Не найдено"),
+     *   @OA\Response(response=422, description="Валидация формы"),
+     *   @OA\Response(response=429, description="Бан запросов на 1 минуту"),
+     *   @OA\Response(response=500, description="Ошибка сервера")
+     * )
+     */
+    public function show($id)
+    {
+        return new BrandResource($this->brandService->showById($id));
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     *
+     *  @OA\Delete(
+     *     security={ {"bearerAuth" : ""} },
+     *   tags={"Бренды компании"},
+     *   path="/v1/company/brands/{id}",
+     *   summary="Удаление бренда из компании",
+     *   @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID бренда",
+     *         required=true,
+     *      ),
+     *     @OA\Response(
+     *     response=200,
+     *     description="",
+     *     @OA\JsonContent(
+     *         @OA\Property(property="data", type="array",  @OA\Items(ref="#/components/schemas/v1.Company.BrandResource")),
+     *     )
+     *  ),
+     *   @OA\Response(response=401, description="Не авторизован"),
+     *   @OA\Response(response=403, description="Контент не доступен"),
+     *   @OA\Response(response=404, description="Не найдено"),
+     *   @OA\Response(response=422, description="Валидация формы"),
+     *   @OA\Response(response=429, description="Бан запросов на 1 минуту"),
+     *   @OA\Response(response=500, description="Ошибка сервера")
+     * )
+     */
+    public function destroy($id)
+    {
+        return $this->brandService->destroy($id);
+    }
+}
